<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/worker_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtWorkerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWorkerId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/worker_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtWorkerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWorkerName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/offence_details"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtOffence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:singleLine="false"              
         />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp" >
        
        <Button
	        android:id="@+id/btnCancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        	        	       
	        android:layout_weight="1"
	        android:text="@string/cancel" />
        
        <Button
	        android:id="@+id/btnAdd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        	       
	        android:layout_weight="1"
	        android:text="@string/add_new" />
        
    </LinearLayout>

</RelativeLayout>